# sharedance

./: COPYING  LICENSE  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac
.github/workflows/: codeql-analysis.yml
php/: Makefile.am  session_handler.php  sharedance.php  test_session.php  test_sharedance.php
src/: Makefile.am  bsd-getopt_long.c  daemonize.c  expire.c  expire.h  fakesnprintf.c  globals.h  log.c  process.c  process.h  sharedanced.c  sharedanced.h  sharedanced_p.h
